<resources>
    <string name="app_name">KuraKani</string>
    <string name="email">Email</string>
    <string name="application_icon">Application Icon</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?\ </string>
    <string name="sign_up">Sign Up</string>
    <string name="kurakani">KuraKani</string>
    <string name="sign_up_to_do_some_kura_kani_with_your_friends">Sign up to do some Kura Kani with your friends</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="have_an_account">Have an Account?\ </string>
    <string name="log_in">Log In</string>
    <string name="profile_image">Profile Image</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_icon">User Icon</string>
    <string name="search_icon">Search Icon</string>
    <string name="messages">Messages</string>
    <string name="back_button">Back Button</string>
    <string name="me">Me</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_image_icon">Add image icon</string>
    <string name="message">Message...</string>
    <string name="send">Send</string>
    <string name="signout">SignOut</string>
    <string name="new_message">New Message</string>
    <string name="start_writing_sweet_text_to_your_friends">Start Writing Sweet text to Your Friends</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_share">Share</string>
    <string name="click_and_hold_to_send_audio_message">Click and Hold to Send Audio Message</string>
    <string name="chat_image">Chat Image</string>
    <string name="video_call">Video Call</string>
    <string name="phone_call">Phone Call</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="leave">Leave</string>
    <string name="toggle_camera">Toggle Camera</string>
    <string name="toggle_microphone">Toggle Microphone</string>
    <string name="rotate_camera">Rotate Camera</string>
</resources>