<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlLongActionsContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_16dp_top_coloronprimary"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="8dp"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:text="@string/action_save"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="14sp"
        app:cornerRadius="32dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDelete"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:text="@string/action_delete"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShare"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:text="@string/action_share"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:text="@string/action_cancel"
        android:textColor="@color/neon_orange"
        android:textSize="14sp" />

</LinearLayout>