<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.main.fragments.me.MeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        >

        <ImageView
            android:id="@+id/ivBtnBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="?attr/colorSecondary" />


        <TextView
            style="@style/UbuntuMedium24secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/ivBtnBack"
            android:text="@string/me" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutUserProfileImageAndIcon"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="128dp"
            app:cardElevation="1dp"
            >

            <ImageView
                android:id="@+id/ivUserProfilePicture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_image"
                />

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="128dp"
            app:cardElevation="1dp"
            android:layout_margin="1dp"
            app:cardBackgroundColor="?attr/colorOnPrimary"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            >

            <ImageView
                android:id="@+id/ivAddImageIcon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_camera_alt_24"
                android:contentDescription="@string/add_image_icon"
                app:tint="@color/colorOnGrey_grey" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:maxWidth="300dp"
        style="@style/MontezRegular32Orange"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/tvBtnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        style="@style/UbuntuMedium24secondary"
        />

</LinearLayout>